--- a/diary/entry/templates/entry/add.html
+++ b/diary/entry/templates/entry/add.html
@@ -22,9 +22,12 @@
     <section class="section">
         <div class="container">
 
+            <form action="{% url 'add' %}" method="POST">
+            {% csrf_token %}
             <div class="field">
                 <div class="control">
-                    <textarea class="textarea" placeholder="What's on your mind?"></textarea>
+                    
+                    {{ form.text }}
 
                 </div>
             </div>
@@ -34,6 +37,7 @@
                     <button class="button is-link">Submit</button>
                 </div>
             </div>
+        </form>
 
         </div>
 
